# Experimental-Robotics-2

./: README.md
src/exp_assignment2/: CMakeLists.txt  package.xml
src/exp_assignment2/include/aruco_ros/: markerdetector.h
src/exp_assignment2/include/dispatch_interface/: FindMarkerInterface.h  MoveToInterface.h
src/exp_assignment2/launch/: action.launch  plan.launch  run.launch  sim.launch
src/exp_assignment2/pddl/: exploration.pddl  rosbot.pddl
src/exp_assignment2/rviz/: rosbot.rviz
src/exp_assignment2/scripts/: bug_as.py  findMarkerAction.py  go_to_point_service.py  wall_follow_service.py
src/exp_assignment2/src/: FindMarkerInterface.cpp  MarkerPublisher.cpp  MoveToInterface.cpp  PlanLauncher.cpp
src/exp_assignment2/worlds/: assignment2.world
src/rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
